fixed spacing of header contents and updated font

--- a/css/remple.css
+++ b/css/remple.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Cambria, Georgia, serif;
+    font-family:  'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .title-remple {
@@ -7,14 +7,16 @@ body {
     font-weight: bold;
     line-height: 2em;
     font-family: LObster, "URW Chancery L", cursive;
+    width: 100%;
 }
 
 .nav-item {
     float: right;
-    margin: 0 0 0 17em;
     font-size: 0.5em;
     font-weight: normal;
-    font-family: Cambria, Georgia, serif;
+    font-family:  'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    text-align: right;
+    width: 50%;
 }
 
 @media (max-width: 850px) {
@@ -22,6 +24,7 @@ body {
         float: none;
         text-align: center;
         line-height: 1.75em;
+        width: 100%;
     }
 
 	.nav-item {
@@ -31,5 +34,6 @@ body {
         display: block;
         text-align: center;
         line-height: 1.75em;
+        width: 100%;
     }
 }
